# Genomic-Sequence-Analysis

./: .gitignore  0456.py  DISCLAIMER.md  README.md  pyproject.toml  quick_start.py  requirements.txt
configs/: default.yaml  hybrid.yaml  transformer.yaml
demo/: app.py
notebooks/: demo.ipynb
scripts/: compare_models.py  evaluate.py  train.py
src/metrics/: __init__.py
src/models/: __init__.py
src/train/: __init__.py
src/utils/: __init__.py
tests/: test_genomic_analysis.py
